attempts to fix beeswarm scroll text not appearing on mobile safari

--- a/src/css/story/beeswarm.styl
+++ b/src/css/story/beeswarm.styl
@@ -166,7 +166,7 @@
 	background-size 1rem 1rem
 
 .step
-	z-index 1
+	z-index set-index('overlay')
 	opacity 1
 	+mq('bp-4')
 		opacity 0.2
